samples/_failures_safe/1761125603_a1cc92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d087581.c: In function ‘main’:
./samples/SAFE/__tmp_2d087581.c:161:12: error: missing terminating " character
  161 |     printf("De
      |            ^~~
./samples/SAFE/__tmp_2d087581.c:161:5: error: expected expression at end of input
  161 |     printf("De
      |     ^~~~~~
./samples/SAFE/__tmp_2d087581.c:161:5: error: expected declaration or statement at end of input
